================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0

- Updated bundled LibEventHandler version to 1.3.3 (AddOnVersion: 1303).

Version 1.6.89 : by Calamath
[LorePlay]:Firesong support
- Simplified Chinese language support
- Fixed Spanish localization issue.
- In the wilderness of Galen and Y'ffelon, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Firesong DLC. Vastyr is now recognized as a city.
- Updated bundled LibEventHandler version to 1.3.1 (AddOnVersion: 1301).
- Updated API version to 101036 (ESO 8.2.x : Firesong)

Version 1.6.88 : by Calamath
[LorePlay]:Lost Depths support
- Overhauled the location recognition engine to accommodate the in-game mechanics of Update 35.
- Adjusted location database of Vivec City.
- Added nil check to LPEmoteHandler in case there is no slash command corresponding to the emoteIndex.
- Updated bundled LibEventHandler version to 1.3.0 (AddOnVersion: 1300).
- Updated API version to 101035 (ESO 8.1.x : Lost Depths)

Version 1.6.87 : by Calamath
[LorePlay]:High Isle support
- High Isle and Amenos, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for High Isle Chapter. Gonfalon Bay and Amenos Station are now recognized as cities.
- Updated bundled LibEventHandler version to 1.2.99 (AddOnVersion: 1299).
- Updated API version to 101034 (ESO 8.0.x : High Isle)
- Addressed API changes regarding CombatMechanicFlags.
[IdleEmotes]
- Adjusted emote tables due to changes in the numbering after the emoteIndex147.
[SmartEmotes]
- Adjusted emote tables due to changes in the numbering after the emoteIndex147.

Version 1.6.86 : by Calamath