@@ -5,6 +5,9 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 
 NOTE : this modified version is still under the Artistic License 2.0
 
+- In the wilderness of Telvanni Peninsula, the add-on automatically recognizes you are in the adventure zone.
+- Apocrypha in the realm of Oblivion, the add-on automatically recognizes you are in the adventure zone.
+- Updated location database for Necrom Chapter. Necrom is now recognized as a city.
 - Updated bundled LibEventHandler version to 1.3.3 (AddOnVersion: 1303).
 
 Version 1.6.89 : by Calamath
